--- a/design/themes/spl_theme/css/addons/cp_spl_theme/styles.less
+++ b/design/themes/spl_theme/css/addons/cp_spl_theme/styles.less
@@ -8609,5 +8609,6 @@ h3.earn-page-faq__addition-title {
 }
 .style {
     color:red;
+    font-size:10px;
 }
 //page - How to make money with SPL -end
